--- a/adopet-store/src/main/resources/application.properties
+++ b/adopet-store/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost/adopet_store?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/adopet_store?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -12,3 +12,5 @@ spring.mail.username=username
 spring.mail.password=password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.threads.virtual.enabled=true
